--- a/assets/stylesheets/pages/_project.scss
+++ b/assets/stylesheets/pages/_project.scss
@@ -3,10 +3,4 @@
 // -----------------------------------------------------------------------------
 
 .page--project {
-	.img-full {
-		@media (min-width: $breakpoint-lg) {
-			width: 920px;
-			margin-left: -137.5px;
-		}
-	}
 }
